--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       <div>
         <h3>Create Fork</h3>
         <p><a href="#" onclick="forkRepo()">Fork Repository</a></p>
-        <div id="results"></div>
+        <div id="results">
+          <!-- <a href='https://api.github.com/repos/nickwohnhas/javascript-fetch-lab/forks'>Google</a> -->
+        </div>
       </div>
       <div>
         <h3>Issues</h3>
